@@ -457,10 +457,12 @@ sub test_changer {
 	    { slot => 3, state => Amanda::Changer::SLOT_FULL,
 	      barcode => 'PTAG00XX', reserved => 1, loaded_in => 0,
 	      current => 1,
-	      device_status => undef, f_type => undef, label => undef },
+	      device_status => $DEVICE_STATUS_VOLUME_UNLABELED,
+	      f_type => undef, label => undef },
 	    { slot => 4, state => Amanda::Changer::SLOT_FULL,
 	      barcode => 'PTAG01XX', reserved => 1, loaded_in => 1,
-	      device_status => undef, f_type => undef, label => undef },
+	      device_status => $DEVICE_STATUS_VOLUME_UNLABELED,
+	      f_type => undef, label => undef },
 	    { slot => 5, state => Amanda::Changer::SLOT_FULL,
 	      barcode => 'PTAG02XX',
 	      device_status => undef, f_type => undef, label => undef },
