@@ -556,10 +556,12 @@ sub test_changer {
 	check_inventory($chg, $mtx_config->{'barcodes'} > 0, $steps->{'load_slot_3'}, [
 	    { slot => 1, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '11111', reserved => 1, loaded_in => 0, current => 1,
-	      device_status => undef, f_type => undef, label => undef },
+	      device_status => $DEVICE_STATUS_VOLUME_UNLABELED,
+	      f_type => undef, label => undef },
 	    { slot => 2, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '22222', reserved => 1, loaded_in => 1,
-	      device_status => undef, f_type => undef, label => undef },
+	      device_status => $DEVICE_STATUS_VOLUME_UNLABELED,
+	      f_type => undef, label => undef },
 	    { slot => 3, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '33333',
 	      device_status => undef, f_type => undef, label => undef },
@@ -1114,7 +1116,7 @@ sub test_changer {
 	      f_type => $Amanda::Header::F_TAPESTART, label => 'SURPRISE!' },
 	    { slot => 3, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '33333', loaded_in => 1,
-	      device_status => undef, f_type => undef, label => 'TAPE-3' },
+	      device_status => $DEVICE_STATUS_SUCCESS, f_type => undef, label => 'TAPE-3' },
 	    { slot => 4, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '44444', loaded_in => 0, current => 1,
 	      device_status => $DEVICE_STATUS_SUCCESS,
@@ -1212,7 +1214,8 @@ sub test_changer {
 	      device_status => undef, f_type => undef, label => undef },
 	    { slot => 3, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '33333', loaded_in => 1,
-	      device_status => undef, f_type => undef, label => 'TAPE-3' },
+	      device_status => $DEVICE_STATUS_SUCCESS,
+	      f_type => undef, label => 'TAPE-3' },
 	    { slot => 4, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '22222', current => 1,
 	      device_status => $DEVICE_STATUS_SUCCESS,
@@ -1273,7 +1276,7 @@ sub test_changer {
 	      device_status => undef, f_type => undef, label => undef },
 	    { slot => 3, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '33333', loaded_in => 0,
-	      device_status => undef, f_type => undef, label => 'TAPE-3' },
+	      device_status => $DEVICE_STATUS_SUCCESS, f_type => undef, label => 'TAPE-3' },
 	    { slot => 4, state => Amanda::Changer::SLOT_FULL,
 	      barcode => '22222', current => 1,
 	      device_status => $DEVICE_STATUS_SUCCESS,
@@ -1303,7 +1306,7 @@ sub test_changer {
 		  device_status => undef, f_type => undef, label => undef },
 		{ slot => 3, state => Amanda::Changer::SLOT_FULL,
 		  barcode => '33333', loaded_in => 0,
-		  device_status => undef, f_type => undef, label => 'TAPE-3' },
+		  device_status => $DEVICE_STATUS_SUCCESS, f_type => undef, label => 'TAPE-3' },
 		{ slot => 4, state => Amanda::Changer::SLOT_FULL,
 		  barcode => '22222', current => 1,
 		  device_status => $DEVICE_STATUS_SUCCESS,
