@@ -1,4 +1,8 @@
 2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
+	* installcheck/Amanda_Changer_ndmp.pl,
+	  installcheck/Amanda_Changer_robot.pl: Fix for previous patch.
+
+2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/robot.pm: return a reservation even on error.
 
 2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
